--- a/ausec-quizzer/src/styles/globals.css
+++ b/ausec-quizzer/src/styles/globals.css
@@ -31,7 +31,7 @@
     --chart-5: 27 87% 67%;
   }
 
-  .dark {
+  .light {
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
     --card: 20 14.3% 4.1%;
